# romea-core-filtering

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  package.xml  romea_filtering.repos  romea_filtering_public.repos
cmake/: romea_filteringConfig.cmake.in
include/romea_core_filtering/: Filter.hpp  FilterMetaState.hpp  FilterPredictor.hpp  FilterType.hpp  GaussianDistribution.hpp  GaussianInput.hpp  GaussianObservation.hpp  GaussianState.hpp
include/romea_core_filtering/kalman/: KalmanFilter.hpp  KalmanFilterUpdaterCore.hpp  UnscentedKalmanFilterUpdaterCore.hpp
include/romea_core_filtering/kalman/core/: KFGain.hpp  KFInnovation.hpp  KFMahalanobis.hpp  KFUpdate.hpp  KFUpdaterTraits.hpp
include/romea_core_filtering/kalman/unscented_transform/: UKFCorrelation.hpp  UnscentedTransformForward.hpp  UnscentedTransformInverse.hpp  UnscentedTransformParameters.hpp
include/romea_core_filtering/particle/: ParticleFilter.hpp  ParticleFilterEstimator.hpp  ParticleFilterGaussianUpdaterCore.hpp  ParticleFilterResampling.hpp  ParticleFilterState.hpp  ParticleFilterUpdaterCore.hpp
include/romea_filtering/: Filter.hpp  FilterPredictor.hpp  FilterUpdater.hpp
include/romea_filtering/kalman/: KalmanFilter.hpp  UnscentedKalmanFilterUpdaterCore.hpp
include/romea_filtering/particle/: ParticleFilterGaussianUpdaterCore.hpp  ParticleFilterState.hpp
test/: CMakeLists.txt  test_filter.cpp  test_kf.cpp  test_ukf.cpp
